<resources>
    <string name="app_name">GithubUser2Tio</string>
    <string name="username">username</string>
    <string name="search">search</string>
    <string name="github_image">github image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="compant">company</string>
    <string name="location">location</string>
    <string name="number">number</string>
    <string name="repositories">repositories</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
</resources>